--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,21 @@ boto3==1.3.1
 Flask==0.12.2
 Flask-Cors==3.0.2
 gunicorn==19.0.0
-Jinja2==2.9.4
 oauthlib==1.0.3
 requests==2.14.2
 requests-file==1.4.1
 requests-oauthlib==0.6.1
+appdirs==1.4.1
+click==6.7
+Flask==0.12
+gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.9.5
+MarkupSafe==0.23
+numpy==1.12.0
+packaging==16.8
+protobuf==3.2.0
+pyparsing==2.1.10
+six==1.10.0
+tensorflow==1.0.0
+Werkzeug==0.11.15
